mod : final 클래스 역직렬화 시, 타입 정보가 안들어가는 문제 해결